# Entity-Component-System

./: CMakeLists.txt  Doxyfile  Entity.cpp  Entity.h  EntityAction.cpp  EntityAction.h  EntityActionManager.cpp  EntityActionManager.h  ExampleDescription.txt  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  ReadME.md  main.cpp  main_example.cpp  main_test.cpp
ECS/: ComponentBase.h  ComponentManager.h  ECS.h  Entity.h  EntityManager.h  ObjectManager.h  System.h  SystemManager.h  Types.h
Example/: EntityAction.h  EntityActionManager.h  EntityActionSystem.h  EntityActionSystemComponentRemover.h  EntityActionSystemSwitcher.h  Object.h  PrivateEntityAction.h  PublicEntityAction.h
PackedArray/: PackedArray.cpp  PackedArray.h  PackedComponentArray.cpp  PackedComponentArray.h
Test/: TestComponents.h  TestSystems.h
doc/: ECS_Doc.html.lnk
doc/html/: _component_base_8h.html  _component_base_8h_source.html  _component_manager_8h.html  _component_manager_8h_source.html  _e_c_s_8h.html  _e_c_s_8h_source.html  _entity_8h.html  _entity_8h_source.html  _entity_manager_8h.html  _entity_manager_8h_source.html  _object_manager_8h.html  _object_manager_8h_source.html  _packed_array_8h.html  _packed_array_8h_source.html  _read_m_e_8md.html  _system_8h.html  _system_8h_source.html  _system_manager_8h.html  _system_manager_8h_source.html  _types_8h.html  _types_8h_source.html  annotated.html  class_component_base-members.html  class_component_base.html  class_component_manager-members.html  class_component_manager.html  class_e_c_s-members.html  class_e_c_s.html  class_entity-members.html  class_entity.html  class_entity_manager-members.html  class_entity_manager.html  class_i_object_manager-members.html  class_i_object_manager.html  class_object_manager-members.html  class_object_manager.html  class_packed_array-members.html  class_packed_array.html  class_system-members.html  class_system.html  (+17 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_5.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_2.js
ecs/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  ECS.cpp  ECS.h  ECSInclude.h  ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h  EntityManager.h  ExampleComponents.h  ObjectManager.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  Types.h
ecs/Components/: ComponentBase.cpp  ComponentBase.h  ExampleComponents.h
ecs/Systems/: ExampleSystems.h
